Version 5.1.0
Fixed a bunch of errors opening and loading and saving files.
Beatstar now saves screen reader vs tts preference.

Version 5.0
Sadly, old save files are no longer compatible. I am sorry for this, however the new stuff I'm working on will "hopefully" make people want to start over.
Added shortcuts for some main menu options which select that option inmediately, for example 1 start game, 3 minigames, etc.
I need to add missions and statistics and credits which allow you to unlock one free pack per credit.
Added audio ducking support to the menus which changes the volume of the music slightly  while the tts speaks. Note that this will not work if you are using a screen reader to speak, as the game has no control over that.
It is now possible to remap your keyboard from within the main menu, in case you can't use the original tab space enter backspace layout.


Version 4.0 
You can now change the voice that the game will use. It will show voices belonging to  the language the game is set to, and will change to the first available voice of the language you select, if you change it. It supports English and Spanish, because so far there haven't been any other translations from players.

Text to speech delay has been greatly reduced.
Fixed another potential issue regarding game delays that had to do with  loading more levels than it should.
You can now change the language from the main menu, because why not?
You can now relocate your beatstar packs library to an external drive, yay!
It is recommended that your beatpacks folder is either on your internal drive or an ssd external drive.
TTS Speech now stops when an option in the main menu is selected.
Fixed a bad problem with playSync
Added new minigame pack quizz.
I have been fixing beatstar's functions for catching key presses. Hopefully this will result in much less CPU use and more precise key timings (there used to be some problems with mac computers).