@@ -46,7 +46,7 @@ class Strings {
 selectVoice:"%1 voices available, use the up and down arrows to select a voice, enter when you're done.",
 	    mSelectVoice:"text to speech voice",
 	    selectNewPath: 'Select the new path for the packs',
-	    noFindFolder: 'I can\'t find your packs folder in %1, you will now be prompted to choose where it is.',
+	    noFindFolder: 'I can\'t find your packs folder in %1, reverting to default folder at username/beatpacks. You can change it again in the main menu.',
 	    mDir: 'Packs folder change (currently %1)',
 	    selectPath: 'Please select the path where your packs are saved:',
 	    directoryQuestion: 'Wait a second... are you ok with your beatpacks folder being in your user folder? If not, you will be prompted to select a different directory to store your soundpacks. If you already have packs in your user folder and wish to change it, you will need to do that yourself as the game will not do it for you',
@@ -354,7 +354,7 @@ selectVoice:"%1 voices available, use the up and down arrows to select a voice, 
 selectVoice:"%1 voces disponibles. Usa las flechas arriba y abajo para seleccionar una nueva voz y pulsa enter cuando hayas terminado.",
 	    mSelectVoice:"Cambiar la voz del juego",
 	    selectNewPath: 'Selecciona una nueva ruta para los packs',
-	    noFindFolder: 'No puedo encontrar tu carpeta de packs en %1, por favor dime dónde está en el cuadro que se te mostrará ahora.',
+	    noFindFolder: 'No puedo encontrar tu carpeta de packs en %1, voy a usar la carpeta por defecto. puedes cambiarla en el menú.',
 	    mDir: 'Cambiar carpeta de packs (ahora %1)',
 	    selectPath: 'Por favor dime la carpeta donde guardaremos los packs',
 	    directoryQuestion: 'Espera! Está bien que guarde los packs de sonido en la carpeta beatpacks de tu carpeta de usuario? Si no, te pediré que busques otra carpeta para guardar los packs. Si ya tienes packs guardados en la carpeta de usuario y quieres cambiar, deberás moverlos tú ya que el juego no lo hace por sí solo',
